@startuml

title __RECORD's Class Diagram__\n

  package com.voicenotes {
    package com.voicenotes.view.record {
      class RecordActivity {
          {static} - REQUEST_CODE_STORAGE : int
          {static} - REQUEST_CODE_RECORD : int
          - stop : ImageButton
          - record : ImageButton
          - myAudioRecorder : MediaRecorder
          ~ durationToSave : String
          - c : Config
          - decoder : Decoder
          - recorder : AudioRecord
          - sampleRate : int
          - minBufferSize : int
          + currentDate : Date
          + isRecording : boolean
          - audioOutputStream : FileOutputStream
          - timerValue : TextView
          - startTime : long
          - customHandler : Handler
          ~ timeInMilliseconds : long
          ~ timeSwapBuff : long
          ~ updatedTime : long
          {static} + currentBib : BibliotecaActivity
          + outputFile : String
          - currentTranscription : String
          - finalPath : String
          - resultText : String
          - tagSelected : String
          ~ ffmpeg : FFmpeg
          ~ res : String
          ~ audioList : ArrayList<String>
          ~ pathsList : ArrayList<String>
          ~ tagsListener : OnItemSelectedListener
          - updateTimerThread : Runnable
          - getDiaMesAño()
          {static} + setBib()
          + getNewPath()
          + buscarEnAudioList()
          + saveAsModoAccesibilidad()
          + isThatFileAlreadyExist()
          - getTagsFromMap()
          + saveAudioAs()
          + isStoragePermissionGranted()
          + onRequestPermissionsResult()
          - grabar()
          + backActivity()
          # onCreate()
      }
    }
  }
  

  package com.voicenotes {
    package com.voicenotes.view.record {
      class SpeechRecognizerThread {
          - short2byte()
          + run()
      }
    }
  }
  

  RecordActivity -up-|> AppCompatActivity
  RecordActivity o-- SpeechRecognizerThread : srt
  RecordActivity +-down- SpeechRecognizerThread
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
